class add detail comment

--- a/mengxuegu-security-parent/mengxuegu-security-web/src/main/resources/application.yml
+++ b/mengxuegu-security-parent/mengxuegu-security-web/src/main/resources/application.yml
@@ -18,4 +18,4 @@ mengxuegu:
         - /dist/**
         - /modules/**
         - /plugins/**
-      loginType: REDIRECT
+      loginType:  # 定义成功失败处理器返回的方式
