--- a/mengxuegu-security-parent/mengxuegu-security-core/pom.xml
+++ b/mengxuegu-security-parent/mengxuegu-security-core/pom.xml
@@ -37,14 +37,14 @@
         </dependency>
         
         <!--数据库依赖-->
-<!--        <dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-        </dependency>-->
+        </dependency>
 
 
         <!--采用redis来管理session-->
