--- a/mengxuegu-security-parent/mengxuegu-security-web/pom.xml
+++ b/mengxuegu-security-parent/mengxuegu-security-web/pom.xml
@@ -31,12 +31,12 @@
             <artifactId>mybatis-plus-boot-starter</artifactId>
         </dependency>
 		-->
-        <!--druid连接池
+        <!--druid连接池-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
         </dependency>
-		-->
+
 
         <!-- thymeleaf 模块启动器-->
         <dependency>
