--- a/mengxuegu-security-parent/mengxuegu-security-web/src/main/resources/application.yml
+++ b/mengxuegu-security-parent/mengxuegu-security-web/src/main/resources/application.yml
@@ -5,6 +5,17 @@ spring:
   thymeleaf:
     cache: false #关闭thymeleaf缓存
 
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource           # 当前数据源操作类型
+    username: root
+    password: yuyue520
+    url: jdbc:mysql://47.104.107.189:33306/study-security?serverTimezone=GMT%2B8  # 数据库名称
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    dbcp2:
+      min-idle: 5                                # 数据库连接池的最小维持连接数
+      initial-size: 5                            # 初始化连接数
+      max-total: 5                               # 最大连接数
+      max-wait-millis: 150                       # 等待连接获取的最大超时时间
 
 # spring security认证可配置化
 mengxuegu:
